--- a/README
+++ b/README
@@ -1,7 +1,9 @@
 CMPUT 412 Projects
 Experimental Mobile Robotics
+Winter 2012
+University of Alberta
 
 Mike Bujold
 Siobhan Buck
 
-This code is for use by the above named individuals. Any use of this code by unauthorized individuals will be seen as plagarism.
+This code is for use by the above named individuals. Any use of this code by unauthorized individuals will be viewed as plagiarism as per the U of A Code of Student Behaviour (Section 30.3.2[1]).
